# anngg

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml
docs/: api.md  comparisons.md  conf.py  gallery.md  index.md  installation.md  quickstart.md  scanpy_parity.md  scplotter_parity.md  stats_pseudobulk.md
docs/_static/css/: custom.css
docs/_templates/autosummary/: class.rst
docs/extensions/: api_examples.py  typed_returns.py
examples/: api_examples.py  gallery.py  grammar_equivalents.py  reproduce_marsilea.py  reproduce_scanpy.py  reproduce_scplotter.py
src/anngg/: __init__.py  _aggregate.py  _palette.py  _resolve.py  clustermap.py  composition.py  correlation.py  de.py  density.py  distributions.py  grammar.py  layout.py  markers.py  plots.py  pseudobulk.py  qc.py  ridge.py  theme.py  upset.py
src/ggann/: __init__.py  _aggregate.py  _palette.py  _resolve.py  clustermap.py  composition.py  correlation.py  de.py  dendrogram.py  density.py  distributions.py  grammar.py  layout.py  markers.py  plots.py  pseudobulk.py  qc.py  ridge.py  theme.py  upset.py
tests/: conftest.py  test_aesthetic_fixes.py  test_aggregate.py  test_api_examples.py  test_compose.py  test_downsample.py  test_features_new.py  test_grammar_equivalents.py  test_layers.py  test_missing_plots.py  test_new_plots.py  test_plots.py  test_prefixes.py  test_reproduce_scanpy.py  test_reproduce_scplotter.py  test_resolve.py  test_review_fixes.py  test_review_fixes2.py  test_ridge_proportions.py  test_set_theme.py  test_split_by_agg.py  test_stats_pseudobulk.py
